--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,3 +74,21 @@ body {
   margin-top: 20px;
   color: #0000ff;
 }
+
+// Article
+
+.article-detail {
+  margin-top: 20px;
+  color: #0000ff;
+}
+
+.article-detail-title {
+  font-size: 3em;
+  margin-bottom: 40px;
+}
+
+.article-show-body {
+  font-size: 1.5em;
+  padding-left: 0em;
+  margin-top: 15px;
+}
