--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,4 +13,6 @@
 	</div>
 
 	<%= link_to "Edit Article", edit_article_path(@article), class: "btn btn-primary btn-lg btn-space" %>
+
+	<%= link_to "Delete Article", article_path(@article), method: :delete, class: "btn btn-danger btn-lg btn-space", data: { confirm: "Are you sure you want to delete article?" } %>
 </article>
